[package]
name = "actix-web"
version = "0.1.0"
authors = ["Dennyching <csjh81129@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" ] }
diesel_migrations = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["full"] }
async-graphql = "2.0"
async-graphql-actix-web = "2.0"
